Attempting to fix white space issues on robots.hmtl

--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@
 		max-height:480px;
 	}	
 	
-	#pic4x3, .pic4x3	{
+	#pic4x3, .pic4x3, .pic4x3left	{
 		-webkit-box-shadow: 0em 0em 8px 0em #000000;
 		-moz-box-shadow: 0em 0em 8px 0em #000000;
 		box-shadow: 0em 0em 8px 0em #000000;
@@ -290,6 +290,8 @@
 		margin-top:.5em;
 		margin-bottom:.25em;
 		text-indent:1.6em;
+		float:right;
+		text-align:left;
 	}
 	
 	#donate	{
